--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <!-- Column 4  -->  <td class="s2" dir="ltr"><a href="https://classic.wowhead.com/spell=7771/enchant-cloak-minor-protection" target="#">Minor Protection</a></td>
 <!-- Column 5  -->  <td class="s2"></td>
 <!-- Column 6  -->  <td class="s2"></td>
-<!-- Column 7  -->  <td class="s2"></td>
+<!-- Column 7  -->  <td class="s2 dir="ltr"><a href="https://classic.wowhead.com/spell=22750/enchant-weapon-healing-power" target="#">Healing Power</a></td>
 <!-- Column 8  -->  <td class="s2"></td>
       </tr>
 
