Category line cells' color changed
from #666666 to #6400FF

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     white-space:nowrap;
     direction:ltr;
     padding:2px 3px 2px 3px;}
-  .ritz .waffle .s0{background-color:#666666;
+  .ritz .waffle .s0{background-color:#6400FF;
     text-align:center;
     font-weight:bold;
     color:#000000;
