--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     white-space:nowrap;
     direction:ltr;
     padding:2px 3px 2px 3px;}
-  .ritz .waffle .s0{background-color:#6400FF;
+  .ritz .waffle .s0{background-color:#7C4FD0;
     text-align:center;
     font-weight:bold;
     color:#000000;
