--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Table Style  -->
 <style type="text/css">
   .ritz .waffle a { color: inherit; }
-  .ritz .waffle .s2{background-color:#595959;
+  .ritz .waffle .s2{background-color:#7C4FD0;
     text-align:center;
     color:#000000;
     font-family:'Arial';
@@ -18,7 +18,7 @@
     white-space:nowrap;
     direction:ltr;
     padding:2px 3px 2px 3px;}
-  .ritz .waffle .s0{background-color:#7C4FD0;
+  .ritz .waffle .s0{background-color:#9477C9;
     text-align:center;
     font-weight:bold;
     color:#000000;
