--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <tr>
 <!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13622/enchant-bracer-lesser-intellect" target="#">Lesser Intellect</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
-<!-- Column 3  -->  <td class="s2"><a href="nhttps://classic.wowhead.com/spell=7426/enchant-chest-minor-absorption" target="#">Minor Absorption</a></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7426/enchant-chest-minor-absorption" target="#">Minor Absorption</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7771/enchant-cloak-minor-protection" target="#">Minor Protection</a></td>
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=25078/enchant-gloves-fire-power" target="#">Fire Power</a></td>
 <!-- Column 6  -->  <td class="s2"></td>
@@ -211,7 +211,7 @@
       <tr>
 <!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7418/enchant-bracer-minor-health" target="#">Minor Health</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
-<!-- Column 3  -->  <td class="s2"></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20025/enchant-chest-greater-stats" target="#">Greater Stats</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=25082/enchant-cloak-greater-nature-resistance" target="#">Greater Nature Resistence</td>
 <!-- Column 5  -->  <td class="s2"></td>
 <!-- Column 6  -->  <td class="s2"></td>
