--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13620/enchant-gloves-fishing" target="#">Fishing</a></td>
 <!-- Column 6  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13817/enchant-shield-stamina" target="#">Stamina</a></td>
 <!-- Column 7  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13503/enchant-weapon-lesser-striking" target="#">Lesser Striking</a></td>
-<!-- Column 8  -->  <td class="s2"></td>
+<!-- Column 8  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=27837/enchant-2h-weapon-agility" target="#">Minor Impact</a></td>
       </tr>
 
 <!-- RAW 8 -->
