--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7454/enchant-cloak-minor-resistance" target="#">Minor Resistance</a></td>
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=25072/enchant-gloves-threat" target="#">Threat</a></td>
 <!-- Column 6  -->  <td class="s2"></td>
-<!-- Column 7  -->  <td class="s2"></td>
+<!-- Column 7  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=23800/enchant-weapon-agility" target="#">Agility</a></td>
 <!-- Column 8  -->  <td class="s2"></td>
       </tr>
 
