--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <tr>
 <!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=23802/enchant-bracer-healing-power" target="#">Healing Power</a></td>
 <!-- Column 2  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20023/enchant-boots-greater-agility" target="#">Greater Agility</a></td>
-<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20026/enchant-chest-major-health" target="#">Major Health</a></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20025/enchant-chest-greater-stats" target="#">Greater Stats</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20015/enchant-cloak-superior-defense" target="#">Superior Defense</a></td>
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20012/enchant-gloves-greater-agility" target="#">Greater Agility</a></td>
 <!-- Column 6  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20017/enchant-shield-greater-stamina" target="#">Greater Stamina</a></td>
@@ -79,7 +79,7 @@
       <tr>
 <!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20011/enchant-bracer-superior-stamina" target="#">Superior Stamina</a></td>
 <!-- Column 2  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20020/enchant-boots-greater-stamina" target="#">Greater Stamina</a></td>
-<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13640/enchant-chest-greater-health" target="#">Greater Health</a></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20026/enchant-chest-major-health" target="#">Major Health</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13635/enchant-cloak-defense" target="#">Defense</a></td>
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13947/enchant-gloves-riding-skill" target="#">Riding Skill</a></td>
 <!-- Column 6  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13485/enchant-shield-lesser-spirit" target="#">Lesser Spirit</a></td>
@@ -89,9 +89,9 @@
 
 <!-- RAW 4 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20009/enchant-bracer-superior-spirit" target="#">Superior Spirit</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20010/enchant-bracer-superior-strength" target="#">Superior Strength</a></td>
 <!-- Column 2  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13935/enchant-boots-agility" target="#">Agility</a></td>
-<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13663/enchant-chest-greater-mana" target="#">Greater Mana</a></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20028/enchant-chest-major-mana" target="#">Major Mana</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13657/enchant-cloak-fire-resistance" target="#">Fire Resistance</a></td>
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13868/enchant-gloves-advanced-herbalism" target="#">Advanced Herbalism</a></td>
 <!-- Column 6  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13631/enchant-shield-lesser-stamina" target="#">Lesser Stamina</a></td>
@@ -101,9 +101,9 @@
 
 <!-- RAW 5 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13945/enchant-bracer-greater-stamina" target="#">Greater Stamina</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20009/enchant-bracer-superior-spirit" target="#">Superior Spirit</a></td>
 <!-- Column 2  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13637/enchant-boots-lesser-agility" target="#">Lesser Agility</a></td>
-<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7857/enchant-chest-health" target="#">Health</a></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13640/enchant-chest-greater-health" target="#">Greater Health</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13746/enchant-cloak-greater-defense" target="#">Greater Defense</a></td>
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13841/enchant-gloves-advanced-mining" target="#">Advanced Mining</a></td>
 <!-- Column 6  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13378/enchant-shield-minor-stamina" target="#">Minor Stamina</a></td>
@@ -113,7 +113,7 @@
 
 <!-- RAW 6 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13931/enchant-bracer-deflection" target="#">Deflection</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13945/enchant-bracer-greater-stamina" target="#">Greater Stamina</a></td>
 <!-- Column 2  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13644/enchant-boots-lesser-stamina" target="#">Lesser Stamina</a></td>
 <!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13538/enchant-chest-lesser-absorption" target="#">Lesser Absorption</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13882/enchant-cloak-lesser-agility" target="#">Lesser Agility</a></td>
@@ -125,9 +125,9 @@
 
 <!-- RAW 7 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13846/enchant-bracer-greater-spirit" target="#">Greater Spirit</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13931/enchant-bracer-deflection" target="#">Deflection</a></td>
 <!-- Column 2  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13890/enchant-boots-minor-speed" target="#">Minor Speed</a></td>
-<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7748/enchant-chest-lesser-health" target="#">Lesser Health</a></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13663/enchant-chest-greater-mana" target="#">Greater Mana</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7861/enchant-cloak-lesser-fire-resistance" target="#">Lesser Fire Resistance</a></td>
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13620/enchant-gloves-fishing" target="#">Fishing</a></td>
 <!-- Column 6  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13817/enchant-shield-stamina" target="#">Stamina</a></td>
@@ -137,9 +137,9 @@
 
 <!-- RAW 8 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13939/enchant-bracer-greater-strength" target="#">Greater Strength</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13846/enchant-bracer-greater-spirit" target="#">Greater Spirit</a></td>
 <!-- Column 2  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7863/enchant-boots-minor-stamina" target="#">Minor Stamina</a></td>
-<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13700/enchant-chest-lesser-stats" target="#">Lesser Stats</a></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7857/enchant-chest-health" target="#">Health</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13421/enchant-cloak-lesser-protection" target="#">Lesser Protection</a></td>
 <!-- Column 5  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13698/enchant-gloves-skinning" target="#">Skinning</a></td>
 <!-- Column 6  -->  <td class="s2"></td>
@@ -149,7 +149,7 @@
 
 <!-- RAW 9 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13822/enchant-bracer-intellect" target="#">Intellect</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13939/enchant-bracer-greater-strength" target="#">Greater Strength</a></td>
 <!-- Column 2  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13836/enchant-boots-stamina" target="#">Stamina</a></td>
 <!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13607/enchant-chest-mana" target="#">Mana</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13522/enchant-cloak-lesser-shadow-resistance" target="#">Lesser Shadow Resistance</a></td>
@@ -161,7 +161,7 @@
 
 <!-- RAW 10 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13622/enchant-bracer-lesser-intellect" target="#">Lesser Intellect</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13822/enchant-bracer-intellect" target="#">Intellect</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
 <!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7426/enchant-chest-minor-absorption" target="#">Minor Absorption</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7771/enchant-cloak-minor-protection" target="#">Minor Protection</a></td>
@@ -173,7 +173,7 @@
 
 <!-- RAW 11 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13501/enchant-bracer-lesser-stamina" target="#">Lesser Stamina</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13622/enchant-bracer-lesser-intellect" target="#">Lesser Intellect</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
 <!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7420/enchant-chest-minor-health" target="#">Minor Health</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7454/enchant-cloak-minor-resistance" target="#">Minor Resistance</a></td>
@@ -185,7 +185,7 @@
 
 <!-- RAW 12 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7779/enchant-bracer-minor-agility" target="#">Minor Agility</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13501/enchant-bracer-lesser-stamina" target="#">Lesser Stamina</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
 <!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13858/enchant-chest-superior-health" target="#">Superior Health</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13794/enchant-cloak-resistance" target="#">Resistance</a></td>
@@ -197,7 +197,7 @@
 
 <!-- RAW 13 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7428/enchant-bracer-minor-deflect" target="#">Minor Deflect</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7779/enchant-bracer-minor-agility" target="#">Minor Agility</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
 <!-- Column 3  -->  <td class="s2" dir="ltr"><a href="https://classic.wowhead.com/spell=13917/enchant-chest-superior-mana" target="#">Superior Mana</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=25081/enchant-cloak-greater-fire-resistance" target="#">Greatr Fire Resistance</a></td>
@@ -209,9 +209,9 @@
 
 <!-- RAW 14 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7418/enchant-bracer-minor-health" target="#">Minor Health</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7428/enchant-bracer-minor-deflect" target="#">Minor Deflect</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
-<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=20025/enchant-chest-greater-stats" target="#">Greater Stats</a></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13700/enchant-chest-lesser-stats" target="#">Lesser Stats</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=25082/enchant-cloak-greater-nature-resistance" target="#">Greater Nature Resistence</td>
 <!-- Column 5  -->  <td class="s2"></td>
 <!-- Column 6  -->  <td class="s2"></td>
@@ -221,9 +221,9 @@
 
 <!-- RAW 15 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7457/enchant-bracer-minor-stamina" target="#">Minor Stamina</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7418/enchant-bracer-minor-health" target="#">Minor Health</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
-<!-- Column 3  -->  <td class="s2"></td>
+<!-- Column 3  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7748/enchant-chest-lesser-health" target="#">Lesser Health</a></td>
 <!-- Column 4  -->  <td class="s2"><a href="https://it.classic.wowhead.com/spell=25084/enchant-cloak-subtlety" target="#">Subtlety</a></td>
 <!-- Column 5  -->  <td class="s2"></td>
 <!-- Column 6  -->  <td class="s2"></td>
@@ -233,7 +233,7 @@
 
 <!-- RAW 16 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13642/enchant-bracer-spirit" target="#">Spirit</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7457/enchant-bracer-minor-stamina" target="#">Minor Stamina</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
 <!-- Column 3  -->  <td class="s2"></td>
 <!-- Column 4  -->  <td class="s2"></td>
@@ -245,7 +245,7 @@
 
 <!-- RAW 17 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13648/enchant-bracer-stamina" target="#">Stamina</a></td>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13642/enchant-bracer-spirit" target="#">Spirit</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
 <!-- Column 3  -->  <td class="s2"></td>
 <!-- Column 4  -->  <td class="s2"></td>
@@ -257,6 +257,18 @@
 
 <!-- RAW 18 -->
       <tr>
+<!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13648/enchant-bracer-stamina" target="#">Stamina</a></td>
+<!-- Column 2  -->  <td class="s2"></td>
+<!-- Column 3  -->  <td class="s2"></td>
+<!-- Column 4  -->  <td class="s2"></td>
+<!-- Column 5  -->  <td class="s2"></td>
+<!-- Column 6  -->  <td class="s2"></td>
+<!-- Column 7  -->  <td class="s2"></td>
+<!-- Column 8  -->  <td class="s2"></td>
+      </tr>
+
+<!-- RAW 19-->
+      <tr>
 <!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=13661/enchant-bracer-strength" target="#">Strength</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
 <!-- Column 3  -->  <td class="s2"></td>
@@ -266,6 +278,18 @@
 <!-- Column 7  -->  <td class="s2"></td>
 <!-- Column 8  -->  <td class="s2"></td>
       </tr>
+
+<!-- RAW 20 -->
+      <tr>
+<!-- Column 1  -->  <td class="s2"></td>
+<!-- Column 2  -->  <td class="s2"></td>
+<!-- Column 3  -->  <td class="s2"></td>
+<!-- Column 4  -->  <td class="s2"></td>
+<!-- Column 5  -->  <td class="s2"></td>
+<!-- Column 6  -->  <td class="s2"></td>
+<!-- Column 7  -->  <td class="s2"></td>
+<!-- Column 8  -->  <td class="s2"></td>
+      </tr
 
     </tbody>
 
