--- a/index.html
+++ b/index.html
@@ -281,14 +281,14 @@
 
 <!-- RAW 20 -->
       <tr>
-<!-- Column 1  -->  <td class="s2"></td>
-<!-- Column 2  -->  <td class="s2"></td>
-<!-- Column 3  -->  <td class="s2"></td>
-<!-- Column 4  -->  <td class="s2"></td>
-<!-- Column 5  -->  <td class="s2"></td>
-<!-- Column 6  -->  <td class="s2"></td>
-<!-- Column 7  -->  <td class="s2"></td>
-<!-- Column 8  -->  <td class="s2"></td>
+<!-- Column 1  -->  <td class="s2">-</td>
+<!-- Column 2  -->  <td class="s2">-</td>
+<!-- Column 3  -->  <td class="s2">-</td>
+<!-- Column 4  -->  <td class="s2">-</td>
+<!-- Column 5  -->  <td class="s2">-</td>
+<!-- Column 6  -->  <td class="s2">-</td>
+<!-- Column 7  -->  <td class="s2">-</td>
+<!-- Column 8  -->  <td class="s2">-</td>
       </tr
 
     </tbody>
