--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <!-- Column 1  -->  <td class="s2"><a href="https://classic.wowhead.com/spell=7457/enchant-bracer-minor-stamina" target="#">Minor Stamina</a></td>
 <!-- Column 2  -->  <td class="s2"></td>
 <!-- Column 3  -->  <td class="s2"></td>
-<!-- Column 4  -->  <td class="s2"></td>
+<!-- Column 4  -->   <td class="s2"><a href="https://it.classic.wowhead.com/spell=25083/enchant-cloak-stealth" target="#">Stealth</a></td>
 <!-- Column 5  -->  <td class="s2"></td>
 <!-- Column 6  -->  <td class="s2"></td>
 <!-- Column 7  -->  <td class="s2"></td>
